Expanded gui features

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 2025-06-06
+  Features
+    - Expanded gui features
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025-05-10
   Initital Release
